# 3k_v.2.2.5

./: Dockerfile  Procfile  fix_avatars.py  pyproject.toml  requirements.txt
_core/: settings.py  urls.py
a_messages/: consumers.py
a_network/templatetags/: network_tags.py
a_posts/templates/a_posts/partials/: _home.html  _like_home.html  _like_postpage.html  _post_card.html  _upload.html
a_users/: otp_utils.py  urls.py  views.py
a_users/templates/a_users/partials/: _profile.html
templates/: _base.html  base.html
templates/a_users/: send_otp.html  verify_otp.html
templates/includes/: sidebar.html
templates/layouts/: account-layout.html  blank-layout.html  main-layout.html
