[project]
name = "KokKokKok"
version = "2.2.4"
description = "ก๊อกๆๆ - 3Kok SuperApp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "dj-database-url==3.1.0",
    "django==5.2.3",
    "django-allauth[socialaccount]>=65.11.1",
    "django-browser-reload>=1.18.0",
    "django-environ==0.12.0",
    "django-htmx==1.23.1",
    "django-otp==1.7.0",
    "django-resized==1.0.3",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.11",
    "requests==2.32.5",
    "whitenoise==6.11.0",
]

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
]